syntax = "proto3";

message OpenAction {
  int64 session_id = 1;
  string path = 2;
}

message StartSessionAction {

}

message LockAcqAction {
  int64 session_id = 1;
  int32 fh = 2;
  int32 ex = 3;
}

message Response {
  int32 res = 1;
  string msg = 2;
}

message SetContentAction {
    int64 session_id = 1;
    int32 fh = 2;
    string content = 3;
}

message OpenReturn {
  int32 fh = 1;
}

message StartSessionReturn {
  int64 seesion_id = 1;
}
